# -

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
